examples/type_system/failing/132_let_initializer_span_precision.flx
fn main() -> Unit {
    let x: Int = if true { "hello" } else { "world" }
}
